# msc-thesis

./: .gitignore  Abstract.lhs  Conclusion.lhs  Example.lhs  FingerTree.lhs  Fixpoints.lhs  FutureWork.lhs  Heap.lhs  HigherOrder.lhs  Introduction.lhs  LOG  Makefile  Morphisms.lhs  Motivation.lhs  Overview.lhs  README  RELATED  RelatedWork.lhs  Storage.lhs  Thesis.lhs  Titlepage.lhs  cont.lhs  draft.sty  fingertree.ai  goal.lhs  gstore.cabal  haskell.fmt  heap.ai  higherorder.fmt  intro.lhs  make  more.lhs  paper.bib  paper.lhs  pers.lhs  pre-proposal.bib  pre-proposal.lhs  seri.lhs  stor.lhs  thesis.bib  (+2 more)
data/: sample.db  test.db
gstore/: README  TODO  gstore.cabal  main  make.sh  publish.sh  query.txt
gstore/data/: cellular_component.obo  test.db
gstore/src/: Dep.hs  Main.hs  MovieDB.hs  Sample.hs  TestAlg.hs  TreeDelete.hs  perftree.hs
gstore/src/Annotation/: Annotation.hs  Debug.hs  HAnnotation.hs  HDebug.hs  NAnnotation.hs  NDebug.hs  Persistent.hs
gstore/src/Aspect/: Aspect.hs  Debug.hs  Persistent.hs  Test.hs
gstore/src/Container/: Tree.hs
gstore/src/Container/Abstract/: Algebra.hs  Tree.hs
gstore/src/Container/FingerTree/: Abstract.hs  NAbstract.hs
gstore/src/Container/Tree/: Abstract.hs  Apo.hs  Cont.hs  Dep0.hs  Dep1.hs  Morph.hs  Morphism.hs  Morphism2.hs  Persistent.hs  PersistentCont.hs  PersistentMorph.hs  PersistentMorphism.hs
gstore/src/Control/Monad/: Lazy.hs
gstore/src/Data/: OBO.hs
gstore/src/Data/Binary/: Generic.hs
gstore/src/Data/Binary/Generic/: Put.hs
gstore/src/Data/OBO/: Document.hs  Entry.hs  Parser.hs
gstore/src/Generic/: Annotate.hs  Arbitrary.hs  Aspect.hs  Core.hs  Fixpoints.hs  Persist.hs  Representation.hs  Write.hs
gstore/src/Generics/: Annotate.hs  Annotation.hs  Arbitrary.hs  Aspect.hs  Cont.hs  Fixpoints.hs  Morph.hs  Morphisms.hs  Representation.hs  Seq.hs  Types.hs
gstore/src/Generics/Morphism/: Ana.hs  Apo.hs  Cata.hs  HPara.hs  NPara.hs  Para.hs
gstore/src/Generics/Regular/: Arbitrary.hs  Fixpoints.hs  Seq.hs
gstore/src/Heap/: Alloc.hs  Block.hs  FileHeap.hs  Heap.hs  Read.hs  Storage.hs  Write.hs
gstore/src/Meta/: Meta.hs  Test.hs
gstore/src/Storage/: FileHeap.hs  FileIO.hs  FileStorage.hs  Storage.hs
gstore/src/Storage/Heap/: Alloc.hs  Block.hs  Heap.hs  Read.hs  Write.hs
gstore/src/System/IO/: Binary.hs  Lazy.hs
img/: fingertree.ai  heap.ai
pre-proposal/: Makefile  cont.lhs  more.lhs  pers.lhs  seri.lhs
proposal/: Makefile  abstract.lhs  extras.lhs  framework.lhs  goal.lhs  intro.lhs  motivation.lhs  overview.lhs  planning.lhs  proposal.bib  proposal.lhs  proposal.toc  related-work.lhs
src/: Annotate.hs  Heap.hs  Main.hs  Mdb.hs  Sample.hs  Storage.hs  Store.hs  Tree.hs  test.db
src/Container/: Tree.hs
src/Generic/: Annotate.hs  Core.hs
src/Heap/: FileHeap.hs  FileIO.hs  IO.hs
thesis/: .gitignore  Abstract.lhs  Example.lhs  Fixpoints.lhs  Introduction.lhs  Makefile  Morphisms.lhs  RelatedWork.lhs  Storage.lhs  Thesis.lhs  abstract.lhs  draft.sty  morphisms-example.lhs  storage.lhs  thesis.bib  thesis.fmt  thesis.lhs
wgp10-genstorage/: .gitignore  Appendix.lhs  Extras.lhs  Fixpoints.lhs  Heap.lhs  Introduction.lhs  Makefile  Morphisms.lhs  Paper.lhs  RelatedWork.lhs  Storage.lhs  Titlepage.lhs  outline.txt  paper.bib  paper.fmt  todo
