Name:             gstore
Version:          0.0.0
Description:      pure functional generic storage
Synopsis:         pure functional generic storage
Category:         Data
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       sfvisser@cs.uu.nl
Build-Type:       Simple
Build-Depends:    QuickCheck ==1.2.0.0,
                  random ==1.0.0.1,
                  bytestring ==0.9.1.4,
                  base ==3.0.3.0,
                  binary ==0.4.4,
                  utf8-string ==0.3.4,
                  containers ==0.2.0.0,
                  fclabels ==0.1,
                  parsec ==2.1.0.1,
                  mtl ==1.1.0.2,
                  unix ==2.3.1.0

Executable:       main
GHC-Options:      -Wall -fno-warn-orphans -O2
Extensions:       CPP
HS-Source-Dirs:   src
Other-modules:    
Main-is:          Main.hs

