Name:             gstore
Version:          0.0.0
Description:      pure functional generic storage
Synopsis:         pure functional generic storage
Category:         Data
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       sfvisser@cs.uu.nl
Build-Type:       Simple
Build-Depends:    QuickCheck,
                  random,
                  bytestring,
                  base,
                  binary,
                  utf8-string,
                  containers,
                  fclabels,
                  parsec ==3.0.*,
                  monads-fd,
                  transformers,
                  regular,
                  regular-binary,
                  she,
                  unix

Executable:       main
GHC-Options:      -Wall -fno-warn-orphans -O2
Extensions:       CPP
HS-Source-Dirs:   src
Other-modules:    
Main-is:          Main.hs
Extensions:       FlexibleContexts
                  FlexibleInstances 
                  RankNTypes
                  EmptyDataDecls
                  ScopedTypeVariables
                  TypeOperators
                  MultiParamTypeClasses
                  KindSignatures
                  GeneralizedNewtypeDeriving
                  TypeFamilies

