Name:             gstore
Version:          0.0.0
Description:      pure functional generic storage
Synopsis:         pure functional generic storage
Category:         Data
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       sfvisser@cs.uu.nl
Build-Type:       Simple

Library
  GHC-Options:      -threaded -Wall -fno-warn-orphans -O
  HS-Source-Dirs:   src

  Build-Depends:    QuickCheck,
                    random,
                    bytestring,
                    base,
                    binary,
                    utf8-string,
                    containers,
                    fclabels,
                    parsec ==3.0.*,
                    monads-fd,
                    transformers,
                    regular,
                    regular-binary,
                    unix

  Exposed-modules:  Annotation.Annotation
                    Annotation.Debug
                    Annotation.Persistent
                    Container.Tree.Abstract
                    Container.Tree.Cont
                    Container.Tree.Morph
                    Container.Tree.PersistentCont
                    Container.Tree.PersistentMorph
                    Control.Monad.Lazy
                    Data.OBO.Document
                    Data.OBO.Entry
                    Data.OBO.Parser
                    Generics.Cont
                    Generics.Morphism.Ana
                    Generics.Morphism.Apo
                    Generics.Morphism.Cata
                    Generics.Morphism.Para
                    Generics.Regular.Arbitrary
                    Generics.Regular.Fixpoints
                    Generics.Regular.Seq
                    Generics.Types
                    Heap.Alloc
                    Heap.Block
                    Heap.Heap
                    Heap.Read
                    Heap.Write
                    System.IO.Binary

  Extensions:       FlexibleContexts
                    FlexibleInstances 
                    RankNTypes
                    EmptyDataDecls
                    ScopedTypeVariables
                    TypeOperators
                    MultiParamTypeClasses
                    KindSignatures
                    GeneralizedNewtypeDeriving
                    TypeFamilies
                    GADTs

